Add become a sponsor page and link to it from sponsors page

--- a/sponsorinfo.html
+++ b/sponsorinfo.html
@@ -111,10 +111,15 @@
     </nav>
   </div>
   <div class="content container px-4">
+    <div class="row mb-2">
+      <div class="col-12">
+        <h5 class="brand-blue text-center ">If you wish to become a sponsor, please contact us through our <a href="contact.html">contacts</a> page.</h5>
+      </div>
+    </div>
     <table class="table">
         <thead>
             <tr>
-                <th class="col-md-3"></th>     
+                <th class="empty col-md-3"></th>     
                 <th class="platinum col-md-3">
                     <h4>Platinum</h4>
                     $5000 Sponsor
@@ -129,6 +134,7 @@
                 </th>
             </tr>
         </thead>
+
         <tr>
             <th>Blugold Athletics Official Sponsor</th>
             <td>
@@ -139,12 +145,13 @@
                 Blugold Athletic game programs
             </td>
             <td>
-                <img class="img-fluid" src="./images/slider/logo2022.jpg" alt="Jig's Up information image">
+
             </td>
-            <td rowspan="2">
-                <img class="img-fluid" src="./images/visit_site_fb.PNG" alt="Jig's Up information image">
+            <td>
+
             </td>
         </tr>
+
         <tr>
             <th>Radio</th>
             <td>
@@ -153,7 +160,9 @@
             <td>
                 Mention in radio commercials
             </td>
+            <td></td>
         </tr>
+
         <tr>
             <th>Social Media</th>
             <td>
@@ -172,6 +181,7 @@
                 Small logo on posts
             </td>
         </tr>
+
         <tr>
             <th>TV Commercial</th>
             <td>
@@ -184,6 +194,7 @@
                 Small logo on last slide of commercial
             </td>
         </tr>
+
         <tr>
             <th>On-Site Banners</th>
             <td>
@@ -196,6 +207,7 @@
                 Small Logo on banner at The View and The Edge
             </td>
         </tr>
+
         <tr>
             <th>Banners/Posters at Ticket Outlets</th>
             <td>
@@ -208,6 +220,7 @@
                 Small Logo
             </td>
         </tr>
+
         <tr>
             <th>Print Materials <br>(October 31 Deadline)</th>
             <td>
@@ -220,6 +233,7 @@
                 Small logo on 100 Posters, 2500 Fish Tickets, 15,700 Raffle Tickets, 100 Table Tents
             </td>
         </tr>
+
         <tr>
             <th>Jigsup.org</th>
             <td>
@@ -233,6 +247,7 @@
                 Small logo on sponsor page and footers with link to company site
             </td>
         </tr>
+
     </table>
   </div>
 
