--- a/sponsors.html
+++ b/sponsors.html
@@ -24,6 +24,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/brand.css">
+  <link rel="stylesheet" href="./css/sponsors.css">
 
   <title>Jig's Up | Sponsors</title>
 
@@ -216,15 +217,15 @@
           </div>
         </div>
         
-
-        <div class="row">
-          <div class="col-12">
-            <p class="brand-blue text-center">If you wish to become a sponsor, please contact us through our contact page.</p>
+        <!-- Become a sponsor button -->
+        <div class="row mt-4">
+          <div class="col-12 text-center mt-4">
+            <button onclick="location.href='sponsorinfo.html'" class="mt-4 btn btn-default sponsor-button">Become a Sponsor</a>
           </div>
         </div>
     </div>
     <div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto">
-      <p class="text-center">Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a></p>
+      <p class="text-center mt-3">Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a></p>
       </br>
       </br>
     </br>
