--- a/index.html
+++ b/index.html
@@ -260,12 +260,12 @@
         </div>
         <div class="row px-3 d-none d-sm-block">
           <div>
-            <iframe width="435" height="245" controls preload="none" src="./assets/video/jigsup_commercial.mp4" allowfullscreen></iframe>
+            <iframe width="435" height="245" src="https://www.youtube.com/embed/NqL8v2OVrb0" title="Jig's Up Commercial" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
         <div class="row px-3 mb-5 d-none d-sm-block">
           <div>
-            <iframe width="435" height="245" controls preload="none" src="./assets/video/jigsup_video.mp4"  allowfullscreen></iframe>
+            <iframe width="435" height="245" src="https://www.youtube.com/embed/lPkstZblrEw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
       </div>
