Update 500th place prize

--- a/prizes.html
+++ b/prizes.html
@@ -519,7 +519,7 @@
                               </tr>
                               <tr>
                                 <th>500</th>
-                                <td>   Eskimo HC40 Propane Auger</td>
+                                <td>MXB 360 in Lost AT with scope and 3 bolts (MSRP $1,099)</td>
                               </tr>
                               
                             </tbody>
