--- a/prizes.html
+++ b/prizes.html
@@ -443,7 +443,7 @@
                               </tr>
                               <tr>
                                 <th>481</th>
-                                <td>   13 Fishing Tickle Stick Rod</td>
+                                <td>Scheels Rod and Reel Combo</td>
                               </tr>
                               <tr>
                                 <th>482</th>
@@ -507,7 +507,7 @@
                               </tr>
                               <tr>
                                 <th>497</th>
-                                <td>   13 Fishing Tickle Stick Rod</td>
+                                <td>13 Fishing Rod and Reel Combo</td>
                               </tr>
                               <tr>
                                 <th>498</th>
