--- a/tickets.html
+++ b/tickets.html
@@ -229,8 +229,8 @@
       </div>
     </div>
 
-    <!-- Silver -->
-    <div class="row mx-6">
+     <!-- Silver -->
+     <div class="row mx-6">
       <div class="col-md-2 text-center my-auto mx-auto">
         <a href="https://www.nextgen-powersportscf.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/xtreme1.png" class="img-fluid" alt="Xtreme">
@@ -246,13 +246,13 @@
           <img src="./images/sponsors/edge.png" class="img-fluid" alt="The Edge">
         </a>
       </div>
-    </div>
-    <div class="row mx-6">
       <div class="col-md-2 text-center my-auto mx-auto">
         <a href="http://www.lakewissotasandbar.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
         </a>
       </div>
+    </div>
+    <div class="row mx-6">
       <div class="col-md-2 text-center my-auto mx-auto">
         <a href="http://www.reconyx.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/Reconyx.png" class="img-fluid" alt="Reconyx">
@@ -268,7 +268,17 @@
           <img src="./images/sponsors/bigfish.png" class="img-fluid" alt="Big Fish Encounters">
         </a>
       </div>
+      <div class="col-md-2 text-center my-auto mx-auto">
+        <a href="https://www.rcu.org/" target="_blank" class="sponsor">
+          <img src="./images/sponsors/rcu.png" class="img-fluid" alt="Royal Credit Union">
+        </a>
+      </div>
     </div>
+
+    <p class="text-center my-1">Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a></p>
+  </div>
+
+  <!-- END FOOTER -->
 
     <p class="text-center my-1">Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a></p>
   </div>
