Update prizes 110 and 230

--- a/prizes.html
+++ b/prizes.html
@@ -291,7 +291,7 @@
                               </tr>
                               <tr>
                                 <th>110</th>
-                                <td>Heatwave Rod Combo & $25 Scheels Gift Card</td>
+                                <td>Jig's Up Custom Rod (Gold Standard Outdoors)</td>
                               </tr>
                               <tr>
                                 <th>120</th>
@@ -339,7 +339,7 @@
                               </tr>
                               <tr>
                                 <th>230</th>
-                                <td>Heatwave Rod Combo & $25 Scheels Gift Card</td>
+                                <td>Jig's Up Custom Rod (Gold Standard Outdoors)</td>
                               </tr>
                               <tr>
                                 <th>240</th>
