--- a/prizes.html
+++ b/prizes.html
@@ -128,17 +128,16 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block img-fluid" src="./images/prizes/prizes2020.jpg" alt="First slide">
-            </div>
-          
-          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <img class="d-block img-fluid" src="./images/prizes/prizes2021.jpg" alt="First slide">
+            </div>          
+          <!-- <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
           </a>
           <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
-          </a>
+          </a> -->
         </div>
       </div>
     </div>
