Added raffle prize list

--- a/prizes.html
+++ b/prizes.html
@@ -578,150 +578,84 @@
                         </div>
                       </div>
                     </div> -->
-                    <!-- <div class="row mb-2">
+                    <div class="row mb-2">
               				<div class="col-sm-12">
-                        <h2 class="brand-blue">2022 Raffle Prize Winners</h2>
+                        <h2 class="brand-blue"><!--2022 Raffle Prize Winners-->2022 Raffle Prize List</h2>
                         <div class="table-responsive">
               						<table class="table">
                             <thead>
                               <th>Place</th>
-                              <th>Contestant</th>
-                              <th>Ticket Number</th>
+                              <!-- <th>Contestant</th> -->
+                              <!-- <th>Ticket Number</th> -->
                               <th>Prize</th>
               							</thead>
               							<tbody>
                               <tr>
                                 <th>1</th>
-                                <td>Keith Voelker</td>
-                                <td>8568</td>
-                                <td>2020 Polaris Sportsman 570 ATV</td>
+                                <td>2022 Polaris Sportsman 570 ATV</td>
                               </tr>
                               <tr>
                                 <th>2</th>
-                                <td>Laurie Lawrence</td>
-                                <td>4174</td>
                                 <td>$500 Scheels Gift Card</td>
                               </tr>
                               <tr>
                                 <th>3</th>
-                                <td>Tom Everson</td>
-                                <td>8200</td>
                                 <td>$500 Scheels Gift Card</td>
                               </tr>
                               <tr>
                                 <th>4</th>
-                                <td>Bill Candell</td>
-                                <td>6156</td>
                                 <td>$500 Scheels Gift Card</td>
                               </tr>
                               <tr>
                                 <th>5</th>
-                                <td>Mallory Shimek</td>
-                                <td>4686</td>
                                 <td>$500 Scheels Gift Card</td>
                               </tr>
                               <tr>
                                 <th>6</th>
-                                <td>Nik Watral</td>
-                                <td>6509</td>
-                                <td>$25 The View GC + Eau Claire Express Baseball Tickets</td>
+                                <td>Dunkin Donuts Prize Basket</td>
                               </tr>
                               <tr>
                                 <th>7</th>
-                                <td>Julia Wopat</td>
-                                <td>3773</td>
-                                <td>Free weekend camper rental from Chippewa Valley RV ($450 value)</td>
+                                <td>$50 Sandbar Gift Card + BluGold Apparel</td>
                               </tr>
                               <tr>
                                 <th>8</th>
-                                <td>Gary Richmond</td>
-                                <td>7121</td>
-                                <td>$10 Scheels Gift Card + Monster Energy Retro Boombox</td>
+                                <td>Movie Basket by Steamatics</td>
                               </tr>
                               <tr>
                                 <th>9</th>
-                                <td>Jackie Custer</td>
-                                <td>7224</td>
-                                <td>$25 Wissota Lodge Gift Card + RTIC Mug</td>
+                                <td>$50 The Edge Gift Card + BluGold Apparel</td>
                               </tr>
                               <tr>
                                 <th>10</th>
-                                <td>Mike Bye</td>
-                                <td>8019</td>
-                                <td>$25 SandBar Gift Card + RTIC Mug</td>
+                                <td>Milwaukee Brewers Tickets + BluGold Apparel</td>
                               </tr>
                               <tr>
                                 <th>11</th>
-                                <td>Sarah Trapp</td>
-                                <td>5682</td>
-                                <td>$25 The Edge Gift Card + Monster Energy Package</td>
+                                <td>$25 Wissota Lodge Gift Card + BluGold Apparel</td>
                               </tr>
                               <tr>
                                 <th>12</th>
-                                <td>Jessica Wiles</td>
-                                <td>8512</td>
-                                <td>$25 Wissota Lodge Gift Card + RTIC Mug</td>
+                                <td>Dunkin Donuts Prize Basket</td>
                               </tr>
                               <tr>
                                 <th>13</th>
-                                <td>Nick Limpel</td>
-                                <td>9832</td>
-                                <td>Autographed Packer Football</td>
+                                <td>$25 The View Gift Card + BluGold Apparel</td>
                               </tr>
                               <tr>
                                 <th>14</th>
-                                <td>Meghan Sommers</td>
-                                <td>4995</td>
-                                <td>$50 Mega CO-OP Gift Card</td>
+                                <td>Movie Basket by Steamatics</td>
                               </tr>
                               <tr>
                                 <th>15</th>
-                                <td>Jonah Gindt</td>
-                                <td>8275</td>
-                                <td>$25 The Edge Gift Card + UW-EC Football Package</td>
-                              </tr>
-                              <tr>
-                                <th>16</th>
-                                <td>Karen Legler</td>
-                                <td>5150</td>
-                                <td>$25 SandBar Gift Card + Visit Eau Claire Basket</td>
-                              </tr>
-                              <tr>
-                                <th>17</th>
-                                <td>Dan Puls</td>
-                                <td>10262</td>
-                                <td>$25 The Edge Gift Card + UW-EC Football Package</td>
-                              </tr>
-                              <tr>
-                                <th>18</th>
-                                <td>Jesse Proffitt</td>
-                                <td>6198</td>
-                                <td>$25 Wissota Lodge Gift Card + Monster Energy Package</td>
-                              </tr>
-                              <tr>
-                                <th>19</th>
-                                <td>Kris Komro</td>
-                                <td>5813</td>
-                                <td>$25 The View Gift Card + Jig's Up Cap</td>
-                              </tr>
-                              <tr>
-                                <th>20</th>
-                                <td>Julie Wardwell</td>
-                                <td>5004</td>
-                                <td>$25 The Edge Gift Card + RTIC Mug</td>
-                              </tr>
-                              <tr>
-                                <th>21</th>
-                                <td>Andrew Hendrickson</td>
-                                <td>5793</td>
-                                <td>$100 Wissota Lodge Gift Certificate</td>
+                                <td>$25 The View Gift Card + Bill's Sport Shop XL Hoodie</td>
                               </tr>
                             </tbody>
                           </table>
                         </div>
                       </div>
                     </div>
-                    <div class="row mb-2">
+                   <!-- <div class="row mb-2">
               				<div class="col-sm-12">
                         <h2 class="brand-blue">2022 Lion's Club Gun Raffle Winners</h2>
                         <h6>Visit: <a href="https://e-clubhouse.org/sites/lakewissota/page-10.php" target="blank">Lake Wissota Lion's Club Website</a></h6>
