Add species and the one that got away prizes

--- a/prizes.html
+++ b/prizes.html
@@ -526,58 +526,59 @@
                         </div>
                       </div>
                     </div>
-                    <!-- <div class="row mb-2">
+                    <div class="row mb-2">
                       <div class="col-sm-12">
-                        <h2 class="brand-blue">2022 Species Prize Winners</h2>
+                        <h2 class="brand-blue">2022 Species Prize <!--Winners-->List</h2>
                         <div class="table-responsive">
                           <table class="table">
                             <thead>
-                              <th>Contestant</th>
+                              <!-- <th>Contestant</th> -->
                               <th>Species</th>
-                              <th>Weight</th>
+                              <!-- <th>Weight</th> -->
+                              <th>Prize</th> 
                             </thead>
                             <tbody>
                               <tr>
-                                <td></td>
+                                <!-- <td></td> -->
                                 <td>Northern</td>
-                                <td></td>
+                                <td>$100 The View</td>
                               </tr>
                               <tr>
-                                <td></td>
+                                <!-- <td></td> -->
                                 <td>Walleye</td>
-                                <td></td>
+                                <td>$100 The Edge</td>
                               </tr>
                               <tr>
-                                <td></td>
+                                <!-- <td></td> -->
                                 <td>Crappie (Pan Fish Category)</td>
-                                <td></td>
+                                <td>$100 SandBar</td>
                               </tr>
                             </tbody>
                           </table>
                         </div>
                       </div>
-                    </div> -->
-                    <!-- <div class="row mb-2">
+                    </div>
+                    <div class="row mb-2">
               				<div class="col-sm-12">
-                        <h2 class="brand-blue">2022 The One That Got Away Prize Winner</h2>
+                        <h2 class="brand-blue">2022 The One That Got Away Prize <!--Winner--></h2>
                         <div class="table-responsive">
               						<table class="table">
                             <thead>
-                              <th>Contestant</th>
-                              <th>Ticket Number</th>
+                              <!-- <th>Contestant</th> -->
+                              <!-- <th>Ticket Number</th> -->
                               <th>Prize</th>
                             </thead>
                             <tbody>
                               <tr>
-                                <td><td>
-                                <td></td>
+                                <!-- <td><td> -->
+                                <!-- <td></td> -->
                                 <td>Eskimo Mako 43cc 8 Inch Auger</td>
                              </tr>
                             </tbody>
                           </table>
                         </div>
                       </div>
-                    </div> -->
+                    </div>
                     <div class="row mb-2">
               				<div class="col-sm-12">
                         <h2 class="brand-blue"><!--2022 Raffle Prize Winners-->2022 Raffle Prize List</h2>
