Add raffle, truck, and one that got away prizes

--- a/prizes.html
+++ b/prizes.html
@@ -160,7 +160,7 @@
                     <div class="row mb-4">
                       <div class="col-sm-12">
                         <h2 class="brand-blue">2021 Ford F150 XLT Super Crew Truck Winner</h2>
-                        <!-- <h4>Insert Name (Ticket Number: Insert Ticket #)</h4> -->
+                        <h4>John Gregory<h4>
                       </div>
                       <div class="col-sm-12">
                         <h2 class="brand-blue">2022 Fish Prize Winners</h2>
@@ -915,13 +915,11 @@
               						<table class="table">
                             <thead>
                               <th>Contestant</th>
-                              <th>Ticket Number</th>
                               <th>Prize</th>
                             </thead>
                             <tbody>
                               <tr>
-                                <td></td>
-                                <td></td>
+                                <td>Craig Champion</td>
                                 <td>Eskimo Mako 43cc 8 Inch Auger</td>
                              </tr>
                             </tbody>
@@ -937,98 +935,82 @@
                             <thead>
                               <th>Place</th>
                               <th>Contestant</th>
-                              <th>Ticket Number</th>
                               <th>Prize</th>
               							</thead>
               							<tbody>
                               <tr>
                                 <th>1</th>
-                                <td></td>
-                                <td></td>
+                                <td>Stephen Spurbel</td>
                                 <td>2022 Polaris Sportsman 570 ATV</td>
                               </tr>
                               <tr>
                                 <th>2</th>
-                                <td></td>
-                                <td></td>
+                                <td>Eldon Exner</td>
                                 <td>$500 Scheels Gift Card</td>
                               </tr>
                               <tr>
                                 <th>3</th>
-                                <td></td>
-                                <td></td>
+                                <td>Grace Holthe</td>
                                 <td>$500 Scheels Gift Card</td>
                               </tr>
                               <tr>
                                 <th>4</th>
-                                <td></td>
-                                <td></td>
+                                <td>Cheng Yang</td>
                                 <td>$500 Scheels Gift Card</td>
                               </tr>
                               <tr>
                                 <th>5</th>
-                                <td></td>
-                                <td></td>
+                                <td>Adam Taylor</td>
                                 <td>$500 Scheels Gift Card</td>
                               </tr>
                               <tr>
                                 <th>6</th>
-                                <td></td>
-                                <td></td>
+                                <td>Vince Haskims</td>
                                 <td>Dunkin Donuts Prize Basket</td>
                               </tr>
                               <tr>
                                 <th>7</th>
-                                <td></td>
-                                <td></td>
+                                <td>Troy Schoenrock</td>
                                 <td>$50 Sandbar Gift Card + BluGold Apparel</td>
                               </tr>
                               <tr>
                                 <th>8</th>
-                                <td></td>
-                                <td></td>
+                                <td>Andrew Starz</td>
                                 <td>Movie Basket by Steamatics</td>
                               </tr>
                               <tr>
                                 <th>9</th>
-                                <td></td>
-                                <td></td>
+                                <td>Sarah Sweeney</td>
                                 <td>$50 The Edge Gift Card + BluGold Apparel</td>
                               </tr>
                               <tr>
                                 <th>10</th>
-                                <td></td>
-                                <td></td>
+                                <td>Justin Hartwig</td>
                                 <td>Milwaukee Brewers Tickets + BluGold Apparel</td>
                               </tr>
                               <tr>
                                 <th>11</th>
-                                <td></td>
-                                <td></td>
+                                <td>Dana Phernetton</td>
                                 <td>$25 Wissota Lodge Gift Card + BluGold Apparel</td>
                               </tr>
                               <tr>
                                 <th>12</th>
-                                <td></td>
-                                <td></td>
+                                <td>Jesse Smith</td>
                                 <td>Dunkin Donuts Prize Basket</td>
                               </tr>
                               <tr>
                                 <th>13</th>
-                                <td></td>
-                                <td></td>
+                                <td>Michael Stevens</td>
                                 <td>$25 The View Gift Card + BluGold Apparel</td>
                               </tr>
                               <tr>
                                 <th>14</th>
-                                <td></td>
-                                <td></td>
+                                <td>Jake Freand</td>
                                 <td>Movie Basket by Steamatics</td>
                               </tr>
                               <tr>
                                 <th>15</th>
-                                <td></td>
-                                <td></td>
+                                <td>Jim Robinson</td>
                                 <td>$25 The View Gift Card + Bill's Sport Shop XL Hoodie</td>
                               </tr>
                             </tbody>
