Prize winner corrections

--- a/prizes.html
+++ b/prizes.html
@@ -160,7 +160,7 @@
                     <div class="row mb-4">
                       <div class="col-sm-12">
                         <h2 class="brand-blue">2021 Ford F150 XLT Super Crew Truck Winner</h2>
-                        <h4>John Gregory<h4>
+                        <h4>John Gregory (Ticket Number: 0263)<h4>
                       </div>
                       <div class="col-sm-12">
                         <h2 class="brand-blue">2022 Fish Prize Winners</h2>
@@ -915,11 +915,13 @@
               						<table class="table">
                             <thead>
                               <th>Contestant</th>
+                              <th>Ticket Number</th>
                               <th>Prize</th>
                             </thead>
                             <tbody>
                               <tr>
                                 <td>Craig Champion</td>
+                                <td>810</td>
                                 <td>Eskimo Mako 43cc 8 Inch Auger</td>
                              </tr>
                             </tbody>
@@ -940,7 +942,7 @@
               							<tbody>
                               <tr>
                                 <th>1</th>
-                                <td>Stephen Spurbel</td>
+                                <td>Stephen Sparbel</td>
                                 <td>2022 Polaris Sportsman 570 ATV</td>
                               </tr>
                               <tr>
