--- a/liveResults.html
+++ b/liveResults.html
@@ -114,10 +114,10 @@
       <div class="row">
         <div class="col-12 pb-4">
           <h2 class="brand-blue">Live Results</h2>
-          <!-- <h5>Join us on February 12th on this page for live results.</h5> -->
+          <h5>Join us on February 12th on this page for live results.</h5>
         </div>
       </div>
-      <div class="row">
+      <!-- <div class="row">
         <div class="col">
           <table id="table" class="table table-striped table-bordered">
             <thead class="thead-light">
@@ -133,7 +133,7 @@
             </tbody>
           </table>
         </div>
-      </div>
+      </div> -->
     </div>
 
   <!-- FOOTER -->
