--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
     <div class="content container px-4">
       <div class="row">
         <div class="col-md-6">
-          <h2 class="brand-blue">Contact Us</h2>
+          <h2 class="brand-blue">Contact Me</h2>
       		<div class="contactForm">
       			<form id="contact_form" action="http://formspree.io/recreation@uwec.edu" method="POST" onsubmit="return validateForm();" enctype="multipart/form-data">
               <input type="hidden" name="_cc" value="poiriesj@uwec.edu" />
