Update Scheels contact

--- a/contact.html
+++ b/contact.html
@@ -169,7 +169,7 @@
                 <td>Wissota Lions Club</td>
               </tr>
               <tr>
-                <td scope="row">Elizabeth Fenske</td>
+                <td scope="row">Liz Fleming</td>
                 <td>Scheels</td>
               </tr>
               <tr>
