--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
     <div class="text-center">
       <h5 class="headers brand-blue">UWEC Recreation, Blugold Athletics, and the Lake Wissota Lions Club presents:</h5>
-      <h1 class="headers brand-blue"><b>9th Annual JIG'S UP Blugold Ice Fishing Contest</b></h1>
+      <h1 class="headers brand-blue"><b>10th Annual JIG'S UP Blugold Ice Fishing Contest</b></h1>
       <div class="row justify-content-center">
         <div class="col-4 col-md-3">
           <a href="http://www.uwec.edu/recreation" target="_blank"><img src="./images/recreation2.png" class=" logo img-fluid " alt="Recreation"></a>
@@ -184,7 +184,7 @@
       <div class="col-lg-6">
         <div class="row px-3">
           <h3 class="d-block-inline brand-blue"><b>Date:</b></h3>
-          <h5 class="d-block-inline my-auto ml-2">Saturday, February 12th, 2022</h5>
+          <h5 class="d-block-inline my-auto ml-2">Saturday, February 11th, 2023</h5>
         </div>
         <div class="row px-3">
           <h3 class="d-inline-block brand-blue"><b>Time:</b></h3>
@@ -229,9 +229,8 @@
     					<li>Mega Holiday Stations (Chippewa Falls locations only)</li>
               <li>Lake Wissota Travel Stop</li>
     					<li>Eau Claire Ford<span style="color:red">*</span></li>
-    					<li>Jacobson's Hardware (bait available)<span style="color:red">*</span></li>
+    					<li>Jacobson's Hardware Chippewa Locations (bait available)<span style="color:red">*</span></li>
     					<li>UWEC Recreation <span style="color:red">*</span></li>
-    					<li>Wissota Lodge <span style="color:red">*</span></li>
     					<li>The Edge <span style="color:red">*</span></li>
     					<li>The View <span style="color:red">*</span></li>
               <li>The SandBar <span style="color:red">*</span></li>
@@ -244,7 +243,7 @@
         </div>
         <div class="row px-3 mb-5">
           <span>For contest rules and additional information, visit jigsup.org or contact UWEC recreation at (715)836-3377.</span>
-          <a href="assets/poster2021.pdf" target="_blank">Jig's Up Poster</a>
+          <!-- <a href="assets/poster2021.pdf" target="_blank">Jig's Up Poster</a> -->
         </div>
       </div>
       <div class="col-lg-6">
