--- a/tickets.html
+++ b/tickets.html
@@ -128,9 +128,9 @@
 
 		<div class="row">
 			<div class="col-12 mx-2">
-				<p><h5 class="d-inline brand-blue">Fish Ticket Availability:</h5> Tickets will be available online until 10:00pm on Friday, February 11th. Fish Tickets will be available on February 12th, 2022 at the weigh-in stations and The View 7-9am for $40.</p>
+				<p><h5 class="d-inline brand-blue">Fish Ticket Availability:</h5> Tickets will be available online until 10:00pm on Friday, February 12th. Fish Tickets will be available on February 13th, 2023 at the weigh-in stations and The View 7-9am for $40.</p>
 				<ul class="bulletless-grey py-1 pr-2">
-					<li><class="my-0">Fish Tickets purchased online will be mailed through January 31st to the address indicated. After January 31st, tickets will be available for pick-up at the weigh-in station at The View. Tickets must be picked up at the Weigh-In Station at The View by 2pm. NOTE: You do not need to pick up your Fish Tickets until you are ready to weigh in a fish.</h5></li>
+					<li><class="my-0">Fish Tickets purchased online will be mailed through January 30th to the address indicated. After January 30th, tickets will be available for pick-up at the weigh-in station at The View. Tickets must be picked up at the Weigh-In Station at The View by 2pm. NOTE: You do not need to pick up your Fish Tickets until you are ready to weigh in a fish.</h5></li>
 				</ul>
 			</div>
 		</div>
@@ -151,7 +151,7 @@
 			<div class="col-12 mx-2">
 				<p><h5 class="d-inline brand-blue">Raffle Tickets:</h5> $5 each or 5 for $20</p>
 				<ul class="bulletless-grey py-1 pr-2">
-					<li><class="my-0">$7,500 in prizes including a New Polaris Sportsman 4-wheeler! Tickets can be purchased up until the drawing on Saturday, February 12th at the weigh-in stations and The View.</h5></li>
+					<li><class="my-0">$7,500 in prizes including a New Polaris Sportsman 4-wheeler! Tickets can be purchased up until the drawing on Saturday, February 11th at the weigh-in stations.</h5></li>
 					<!--<li><br/></li>
 					<li><class="my-0">Claim tickets will be mailed through January 28th to the address indicated. After January 28th, claim tickets will be available for pick-up at the weigh-in station at The View. Pick up claim tickets by 2:00pm. Need not be present to win.</h5></li> -->
 				</ul>
@@ -167,7 +167,7 @@
 					<li>Mega Holiday Stations (Chippewa Falls locations only)</li>
           <li>Lake Wissota Travel Stop</li>
 					<li>Eau Claire Ford<span style="color:red">*</span></li>
-					<li>Jacobson's Hardware (bait available)<span style="color:red">*</span></li>
+					<li>Jacobson's Hardware Chippewa Locations (bait available)<span style="color:red">*</span></li>
 					<li>UWEC Recreation <span style="color:red">*</span></li>
 					<li>The Edge <span style="color:red">*</span></li>
 					<li>The View <span style="color:red">*</span></li>
