--- a/contact.html
+++ b/contact.html
@@ -173,6 +173,10 @@
                 <td>Scheels</td>
               </tr>
               <tr>
+                <td scope="row">Nick Hoven</td>
+                <td>UWEC Athletics</td>
+              </tr>
+              <tr>
                 <td scope="row">Andy Jepsen</td>
                 <td>UWEC Recreation and Sport Operations</td>
               </tr>
