--- a/liveResults.html
+++ b/liveResults.html
@@ -114,7 +114,7 @@
       <div class="row">
         <div class="col-12 pb-4">
           <h2 class="brand-blue">Live Results</h2>
-          <h5>Join us on February 12th on this page for live results.</h5>
+          <h5>Join us on February 11th on this page for live results. The last 15 fish registered will be listed and continuously updated until 2pm.</h5>
         </div>
       </div>
       <!-- <div class="row">
