--- a/schedule.html
+++ b/schedule.html
@@ -114,7 +114,7 @@
       <div class="row">
         <div class="col-12">
           <h2 class="brand-blue">Schedule</h2>
-          <h5>Saturday, February 12th</h5>
+          <h5>Saturday, February 11th</h5>
           <table class="table">
             <thead scope="col">
               <tr>
@@ -135,9 +135,9 @@
                 <td>Last Chance to purchase additional Fish Tickets for $40, available 7:00AM-9:00AM</td>
               </tr>
               <tr>
-                <th scope="row">Lake Wissota</th>
-                <td>12:00PM</td>
-                <td>Kids Klub event on the ice in front of The View, Prize drawings at 1:00PM</td>
+                <th scope="row">The View</th>
+                <td>11:00AM</td>
+                <td>Kids Klub event on the ice in front of The View, Prize drawings at 12:30PM</td>
               </tr>
               <tr>
                 <th scope="row">The View & The Edge</th>
@@ -146,7 +146,7 @@
               </tr>
               <tr>
                 <th scope="row">The View</th>
-                <td></td>
+                <td>3:00PM</td>
                 <td>Raffle Prize drawing, tickets available for purchase until drawing begins, Fish contest winners announced after.</td>
               </tr>
             </tbody>
