--- a/directions.html
+++ b/directions.html
@@ -71,9 +71,9 @@
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item brand-blue" href="lodging.html" >Lodging</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item brand-blue" target="_blank" href="assets/2022_Rules_of_the_Tournament.pdf">Rules</a>
+                <a class="dropdown-item brand-blue" target="_blank" href="assets/2023 Jigs Up Tournament Rules.pdf">Rules</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item brand-blue" target="_blank" href="assets/WIFA_details.pdf">WIFA Tournament</a>
+                <a class="dropdown-item brand-blue" target="_blank" href="assets/WIFA_2023.pdf">WIFA Tournament</a>
               </div>
             </li>
             <li class="nav-item">
