--- a/sponsors.html
+++ b/sponsors.html
@@ -142,6 +142,11 @@
 
         <div class="row">
           <div class="col-md-3 text-center my-auto mx-auto">
+            <a href="https://icecastlefh.com/" target="_blank" class="sponsors">
+              <img src="./images/sponsors/icecastlefh.png" class="img-fluid" alt="Ice Castle Fish Houses">
+            </a>
+          </div>
+          <div class="col-md-3 text-center my-auto mx-auto">
             <a href="http://www.geteskimo.com/" target="_blank" class="sponsors">
               <img src="./images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
             </a>
