--- a/sponsors.html
+++ b/sponsors.html
@@ -174,6 +174,11 @@
             </a>
           </div>
         </div>
+        <div class="col-md-3 text-center my-auto mx-auto">
+          <a href="http://www.theviewonlakewissota.com/" target="_blank" class="sponsors">
+            <img src="./images/sponsors/view.png" class="img-fluid" alt="The View">
+          </a>
+        </div>
 
         <!-- Silver Sponsors -->
         <div class="row">
@@ -189,8 +194,8 @@
             </a>
           </div>
           <div class="col-md-2 text-center my-auto mx-auto">
-            <a href="http://www.theviewonlakewissota.com/" target="_blank" class="sponsors">
-              <img src="./images/sponsors/view.png" class="img-fluid" alt="The View">
+            <a href="https://www.nextgen-powersportscf.com/" target="_blank" class="sponsors">
+              <img src="./images/sponsors/goldstandard.webp" class="img-fluid" alt="Gold Standard Outdoors">
             </a>
           </div>
           <div class="col-md-2 text-center my-auto mx-auto">
