--- a/sponsors.html
+++ b/sponsors.html
@@ -142,11 +142,6 @@
 
         <div class="row">
           <div class="col-md-3 text-center my-auto mx-auto">
-            <a href="https://icecastlefh.com/" target="_blank" class="sponsors">
-              <img src="./images/sponsors/icecastlefh.png" class="img-fluid" alt="Ice Castle Fish Houses">
-            </a>
-          </div>
-          <div class="col-md-3 text-center my-auto mx-auto">
             <a href="http://www.geteskimo.com/" target="_blank" class="sponsors">
               <img src="./images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
             </a>
@@ -164,6 +159,11 @@
         </div>
         <div class="row">
           <div class="col-md-3 text-center my-auto mx-auto">
+            <a href="https://icecastlefh.com/" target="_blank" class="sponsors">
+              <img src="./images/sponsors/icecastlefh.png" class="img-fluid" alt="Ice Castle Fish Houses">
+            </a>
+          </div>
+          <div class="col-md-3 text-center my-auto mx-auto">
             <a href="http://anytimetrailer.com/" target="_blank" class="sponsors">
               <img src="./images/sponsors/AnytimeTrailer.png" class="img-fluid" alt="Anytime Trailer">
             </a>
@@ -174,10 +174,17 @@
             </a>
           </div>
         </div>
-        <div class="col-md-3 text-center my-auto mx-auto">
-          <a href="http://www.theviewonlakewissota.com/" target="_blank" class="sponsors">
-            <img src="./images/sponsors/view.png" class="img-fluid" alt="The View">
-          </a>
+        <div class="row">
+          <div class="col-md-3 text-center my-auto mx-auto">
+            <a href="http://www.theviewonlakewissota.com/" target="_blank" class="sponsors">
+              <img src="./images/sponsors/view.png" class="img-fluid" alt="The View">
+            </a>
+          </div>
+          <div class="col-md-3 text-center my-auto mx-auto">
+            <a href="https://www.nextgen-powersportscf.com/" target="_blank" class="sponsors">
+              <img src="./images/sponsors/xtreme1.png" class="img-fluid" alt="Xtreme">
+            </a>
+          </div>
         </div>
 
         <!-- Silver Sponsors -->
@@ -188,11 +195,6 @@
         </div>
 
         <div class="row">
-          <div class="col-md-2 text-center my-auto mx-auto">
-            <a href="https://www.nextgen-powersportscf.com/" target="_blank" class="sponsors">
-              <img src="./images/sponsors/xtreme1.png" class="img-fluid" alt="Xtreme">
-            </a>
-          </div>
           <div class="col-md-2 text-center my-auto mx-auto">
             <a href="https://www.nextgen-powersportscf.com/" target="_blank" class="sponsors">
               <img src="./images/sponsors/goldstandard.webp" class="img-fluid" alt="Gold Standard Outdoors">
