--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         </div>
         <div class="row">
           <div class="col-12">
-            Purchase tickets at the following locations:
+            Purchase tickets at the following lokation:
             <ul class="bulletless-grey">
     					<li>Online at jigsup.org <span style="color:red"></span></li>
     					<li>Scheels (bait available) <span style="color:red">*</span></li>
