New sponsor layout

--- a/sponsors.html
+++ b/sponsors.html
@@ -141,11 +141,7 @@
         </div>
 
         <div class="row">
-          <div class="col-md-3 text-center my-auto mx-auto">
-            <a href="http://www.geteskimo.com/" target="_blank" class="sponsors">
-              <img src="./images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
-            </a>
-          </div>
+
           <div class="col-md-3 text-center my-auto mx-auto">
             <a href="http://www.megacoop.com/" target="_blank" class="sponsors">
               <img src="./images/sponsors/megaholiday.png" class="img-fluid" alt="Mega Holiday">
@@ -181,6 +177,11 @@
             </a>
           </div>
           <div class="col-md-3 text-center my-auto mx-auto">
+            <a href="https://www.erbertandgerberts.com/" target="_blank" class="sponsors">
+              <img src="./images/sponsors/erbertsGerberts.png" class="img-fluid" alt="Erberts and Gerberts">
+            </a>
+          </div>
+          <div class="col-md-3 text-center my-auto mx-auto">
             <a href="https://www.nextgen-powersportscf.com/" target="_blank" class="sponsors">
               <img src="./images/sponsors/xtreme1.png" class="img-fluid" alt="Xtreme">
             </a>
@@ -195,6 +196,11 @@
         </div>
 
         <div class="row">
+          <div class="col-md-2 text-center my-auto mx-auto">
+            <a href="http://www.geteskimo.com/" target="_blank" class="sponsors">
+              <img src="./images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
+            </a>
+          </div>
           <div class="col-md-2 text-center my-auto mx-auto">
             <a href="https://www.nextgen-powersportscf.com/" target="_blank" class="sponsors">
               <img src="./images/sponsors/goldstandard.webp" class="img-fluid" alt="Gold Standard Outdoors">
