--- a/lodging.html
+++ b/lodging.html
@@ -85,7 +85,7 @@
               <a class="nav-link brand-blue" href="tickets.html">Tickets</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link brand-blue" href="http://www.blugolds.com/TeamStore" target="_blank">Apparel</a>
+              <a class="nav-link brand-blue" href="https://bsnteamsports.com/shop/EbpYVHXxtX" target="_blank">Apparel</a>
             </li>
             <li class="nav-item">
               <a class="nav-link brand-blue" href="contact.html">Contacts</a>
