--- a/tickets.html
+++ b/tickets.html
@@ -183,93 +183,127 @@
 
   <!-- FOOTER -->
   <div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto pt-2">
-    <!-- Platinum -->
-    <div class="row mx-6">
+    <!-- Platinum Sponsors -->
+    <div class="row">
+      <div class="col-12 mt-3">
+        <h1 class="brand-blue text-center">Platinum</h1>
+      </div>
+    </div>
+
+    <div class="row">
       <div class="col-md-4 text-center my-auto mx-auto">
-        <a href="http://www.scheels.com/" target="_blank" class="sponsor">
+        <a href="http://www.scheels.com/" target="_blank" class="title-sponsors">
           <img src="./images/sponsors/scheels.png" class="img-fluid" alt="Scheels">
         </a>
       </div>
       <div class="col-md-4 text-center my-auto mx-auto">
-        <a href="http://www.eauclaireford.com/" target="_blank" class="sponsor">
+        <a href="http://www.eauclaireford.com/" target="_blank" class="title-sponsors">
           <img src="./images/sponsors/ford.png" class="img-fluid" alt="Ford">
         </a>
       </div>
     </div>
 
-    <!-- Gold -->
-    <div class="row mx-6">
-      <div class="col-md-3 text-center my-auto mx-auto">
-        <a href="http://www.geteskimo.com/" target="_blank" class="sponsor">
-          <img src="./images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
-        </a>
+  <!-- Gold Sponsors -->
+  <div class="row">
+      <div class="col-12 mt-4">
+        <h2 class="brand-blue text-center">Gold</h2>
       </div>
+    </div>
+
+    <div class="row">
       <div class="col-md-3 text-center my-auto mx-auto">
-        <a href="http://www.megacoop.com/" target="_blank" class="sponsor">
+        <a href="http://www.megacoop.com/" target="_blank" class="sponsors">
           <img src="./images/sponsors/megaholiday.png" class="img-fluid" alt="Mega Holiday">
         </a>
       </div>
       <div class="col-md-3 text-center my-auto mx-auto">
-        <a href="http://www.weau.com/" target="_blank" class="sponsor">
+        <a href="http://www.geteskimo.com/" target="_blank" class="sponsors">
+          <img src="./images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
+        </a>
+      </div>
+      <div class="col-md-3 text-center my-auto mx-auto">
+        <a href="http://www.weau.com/" target="_blank" class="sponsors">
           <img src="./images/sponsors/weau13.png" class="img-fluid" alt="WEAU13">
         </a>
       </div>
     </div>
-
-    <div class="row mx-6">
+    <div class="row">
       <div class="col-md-3 text-center my-auto mx-auto">
-        <a href="http://anytimetrailer.com/" target="_blank" class="sponsor">
+        <a href="https://icecastlefh.com/" target="_blank" class="sponsors">
+          <img src="./images/sponsors/icecastlefh.png" class="img-fluid" alt="Ice Castle Fish Houses">
+        </a>
+      </div>
+      <div class="col-md-3 text-center my-auto mx-auto">
+        <a href="http://anytimetrailer.com/" target="_blank" class="sponsors">
           <img src="./images/sponsors/AnytimeTrailer.png" class="img-fluid" alt="Anytime Trailer">
         </a>
       </div>
       <div class="col-md-3 text-center my-auto mx-auto">
-        <a href="https://www.wissotalodge.com/" target="_blank" class="sponsor">
+        <a href="https://www.wissotalodge.com/" target="_blank" class="sponsors">
           <img src="./images/sponsors/WissotaLodge.png" class="img-fluid" alt="Wissota Lodge">
         </a>
       </div>
     </div>
-
-     <!-- Silver -->
-     <div class="row mx-6">
-      <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="https://www.nextgen-powersportscf.com/" target="_blank" class="sponsor">
-          <img src="./images/sponsors/xtreme1.png" class="img-fluid" alt="Xtreme">
-        </a>
-      </div>
-      <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="http://www.theviewonlakewissota.com/" target="_blank" class="sponsor">
+    <div class="row">
+      <div class="col-md-3 text-center my-auto mx-auto">
+        <a href="http://www.theviewonlakewissota.com/" target="_blank" class="sponsors">
           <img src="./images/sponsors/view.png" class="img-fluid" alt="The View">
         </a>
       </div>
+      <div class="col-md-3 text-center my-auto mx-auto">
+        <a href="https://www.erbertandgerberts.com/" target="_blank" class="sponsors">
+          <img src="./images/sponsors/erbertsGerberts.png" class="img-fluid" alt="Erberts and Gerberts">
+        </a>
+      </div>
+      <div class="col-md-3 text-center my-auto mx-auto">
+        <a href="https://www.nextgen-powersportscf.com/" target="_blank" class="sponsors">
+          <img src="./images/sponsors/xtreme1.png" class="img-fluid" alt="Xtreme">
+        </a>
+      </div>
+    </div>
+
+    <!-- Silver Sponsors -->
+    <div class="row">
+      <div class="col-12 mt-4">
+        <h3 class="brand-blue text-center">Silver</h3>
+      </div>
+    </div>
+
+    <div class="row">
       <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="http://www.theedgepubandeatery.com/" target="_blank" class="sponsor">
+        <a href="https://www.nextgen-powersportscf.com/" target="_blank" class="sponsors">
+          <img src="./images/sponsors/goldstandard.webp" class="img-fluid" alt="Gold Standard Outdoors">
+        </a>
+      </div>
+      <div class="col-md-2 text-center my-auto mx-auto">
+        <a href="http://www.theedgepubandeatery.com/" target="_blank" class="sponsors">
           <img src="./images/sponsors/edge.png" class="img-fluid" alt="The Edge">
         </a>
       </div>
       <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="http://www.lakewissotasandbar.com/" target="_blank" class="sponsor">
+        <a href="http://www.lakewissotasandbar.com/" target="_blank" class="sponsors">
           <img src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
         </a>
       </div>
     </div>
-    <div class="row mx-6">
+    <div class="row">
       <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="http://www.reconyx.com/" target="_blank" class="sponsor">
+        <a href="http://www.reconyx.com/" target="_blank" class="sponsors">
           <img src="./images/sponsors/Reconyx.png" class="img-fluid" alt="Reconyx">
         </a>
       </div>
       <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="https://www.steamaticwwi.com/" target="_blank" class="sponsor">
+        <a href="https://www.steamaticwwi.com/" target="_blank" class="sponsors">
           <img src="./images/sponsors/steamatic.png" class="img-fluid" alt="Steamatic">
         </a>
       </div>
       <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="https://bigfishencounters.com/" target="_blank" class="sponsor">
+        <a href="https://bigfishencounters.com/" target="_blank" class="sponsors">
           <img src="./images/sponsors/bigfish.png" class="img-fluid" alt="Big Fish Encounters">
         </a>
       </div>
       <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="https://www.rcu.org/" target="_blank" class="sponsor">
+        <a href="https://www.rcu.org/" target="_blank" class="sponsors">
           <img src="./images/sponsors/rcu.png" class="img-fluid" alt="Royal Credit Union">
         </a>
       </div>
