Prize changes for Species winners

--- a/prizes.html
+++ b/prizes.html
@@ -871,7 +871,7 @@
                     </div>
                     <div class="row mb-2">
                       <div class="col-sm-12">
-                        <h2 class="brand-blue">2022 Species Prize Winners</h2>
+                        <h2 class="brand-blue">2023 Species Prize Winners</h2>
                         <div class="table-responsive">
                           <table class="table">
                             <thead>
@@ -887,14 +887,14 @@
                                 <td></td>
                                 <td></td>
                                 <td></td>
-                                <td>$100 The View</td>
+                                <td>$100 Sandbar</td>
                               </tr>
                               <tr>
                                 <td></td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
-                                <td>$100 The Edge</td>
+                                <td>$100 Sandbar</td>
                               </tr>
                               <tr>
                                 <td></td>
