--- a/contact.html
+++ b/contact.html
@@ -157,12 +157,12 @@
             </thead>
             <tbody>
               <tr>
-                <td scope="row" class="name">Shari Breed</td>
-                <td class="organization">UWEC Recreation and Sport Operations</td>
-              </tr>
-              <tr>
                 <td scope="row">Tammy Brunschmid</td>
                 <td>UWEC Recreation and Sport Operations</td>
+              </tr>
+              <tr>
+                <td scope="row">Kaitlyn Carlson</td>
+                <td>Scheels</td>
               </tr>
               <tr>
                 <td scope="row">Chuck Daly</td>
@@ -191,6 +191,10 @@
               <tr>
                 <td scope="row">Dave Prescher</td>
                 <td>Wissota Lions Club</td>
+              </tr>
+              <tr>
+                <td scope="row" class="name">Shari Schuebel</td>
+                <td class="organization">UWEC Recreation and Sport Operations</td>
               </tr>
               <tr>
                 <td scope="row">Dan Schumacher</td>
