Lions clubs Link additoin

--- a/prizes.html
+++ b/prizes.html
@@ -1020,12 +1020,12 @@
                         </div>
                       </div>
                     </div>
-                   <!-- <div class="row mb-2">
+                    <div class="row mb-2">
               				<div class="col-sm-12">
                         <h2 class="brand-blue">2022 Lion's Club Gun Raffle Winners</h2>
                         <h6>Visit: <a href="https://e-clubhouse.org/sites/lakewissota/page-10.php" target="blank">Lake Wissota Lion's Club Website</a></h6>
                       </div>
-                    </div> -->
+                    </div> 
                   </div>
                 </div>
               </div>
