--- a/liveResults.html
+++ b/liveResults.html
@@ -112,12 +112,12 @@
 
     <div class="content container px-4">
       <div class="row">
-        <div class="col-12 pb-4">
+        <!-- <div class="col-12 pb-4">
           <h2 class="brand-blue">Live Results</h2>
           <h5>Join us on February 11th on this page for live results. The last 15 fish registered will be listed and continuously updated until 2pm.</h5>
-        </div>
+        </div> -->
       </div>
-      <!-- <div class="row">
+       <div class="row">
         <div class="col">
           <table id="table" class="table table-striped table-bordered">
             <thead class="thead-light">
@@ -133,7 +133,7 @@
             </tbody>
           </table>
         </div>
-      </div> -->
+      </div>
     </div>
 
   <!-- FOOTER -->
