Winners by species

--- a/prizes.html
+++ b/prizes.html
@@ -883,24 +883,24 @@
                             </thead>
                             <tbody>
                               <tr>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Kevin Hanson</td>
+                                <td>2156</td>
+                                <td>Northern</td>
+                                <td>6.345</td>
                                 <td>$100 Sandbar</td>
                               </tr>
                               <tr>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Jon Zierden</td>
+                                <td>288</td>
+                                <td>Walleye</td>
+                                <td>7.115</td>
                                 <td>$100 Sandbar</td>
                               </tr>
                               <tr>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>John Gregory</td>
+                                <td>188</td>
+                                <td>Crappie</td>
+                                <td>1.551</td>
                                 <td>$100 SandBar</td>
                               </tr>
                             </tbody>
